#
# Test if requirements are met
#

IF(NOT  DEFINED CMAKE_SCRIPT_MODE_FILE)
	CMAKE_MINIMUM_REQUIRED(VERSION 3.18)
	PROJECT(CMLIB_CACHE_TEST)
ENDIF()


OPTION(CMLIB_FILE_DOWNLOAD_GIT_ARCHIVE_DISABLE
	"TEST"
	ON
)

OPTION(CMLIB_FILE_DOWNLOAD_GIT_ARCHIVE_ONLY
	"TEST2"
	ON
)


LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/../../../")
FIND_PACKAGE(CMLIB)

INCLUDE("${CMAKE_CURRENT_LIST_DIR}/../../TEST.cmake")


